# tngri_client

./: README.md  pyproject.toml  tngri_client_pull  tngri_client_pull.pub
src/tngri/: __init__.py  client.py  config.py  s3.py
src/tngri_client/: __init__.py
