[project]
name = "tngri"
version = "0.1.0"
description = "Client for TNGRi distributed analytical platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.10",
    "click>=8.2.1",
    "pandas>=3.0.0",
    "polars>=1.31.0",
    "websocket-client>=1.8.0",
]

[project.scripts]
tngri-client = "tngri.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tngri"]

[tool.ruff]
line-length = 99
lint.ignore = [
    "C90", # line too long (handled by black)
    "E501", # line too long
    "D100", # missing docstring in public module
    "D101", # missing docstring in public class
    "D102", # missing docstring in public method
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D106", # missing docstring in puglic nested class
    "D107", # missing docstring in __init__
    "D200", # one-line docstring should fit on one line with quotes
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D401", # First line should be in imperative mood
    "D415", # First line should end with a period
    "E741", # ambiguous variable name
    "Q000", # Double quotes found but single quotes preferred
    "UP038", # Use X | Y in {} call instead of (X, Y)
    "RUF009", # Do not perform function call in dataclass defaults
]
lint.extend-select = [
    "C4", # comprehensions
    "E", # pycodestyle
    "F", # pyflakes
    "SIM", # flake8-simplify
    "RUF", # ruff
    "UP", # pyupgrade
    "W", # whitespaces
    "D", # pydocstyle
    "I", # sort imports
    "PERF101", # unnecessary-list-cast
    "PERF102", # incorrect-dict-iterator
    "RUF100", # unused-noqa
    "UP", # pyupgrade
]
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
plugins = ['pydantic.mypy']
ignore_missing_imports = true
allow_untyped_calls = true
allow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
warn_no_return = false
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
allow_subclassing_any = false
namespace_packages = true
exclude = [
    'venv',
    '.venv',
]

[[tool.mypy.overrides]]
module = ["rpyc.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
addopts = "--disable-warnings"

[dependency-groups]
dev = [
    "black>=25.1.0",
]
